--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.0",
     "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
